Removed Guava as a dependency.